# rag-intro

./: README.md  pyproject.toml  requirements.txt
data-ingestion-parsing/: csvExcelIngestion.ipynb  dataIngestion.ipynb  databaseIngestion.ipynb  jsonIngestion.ipynb  pdfdataIngestion.ipynb  wordDocDataIngestion.ipynb
data-parsing/: dataIngestion.ipynb
data/database/: company.db
data/json_files/: company.json  events.jsonl
data/structured_files/: Sheet1.csv  products_data.xlsx
data/word_docs/: rag-proposals.docx
