[project]
name = "rag-intro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.2.0",
    "faiss-cpu>=1.12.0",
    "ipykernel>=7.0.1",
    "langchain>=1.0.0",
    "langchain-community>=0.4",
    "langchain-groq>=1.0.0",
    "langchain-openai>=1.0.0",
    "pypdf>=6.1.1",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.1",
    "tiktoken>=0.12.0",
]
